[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "sharkio-mock-middleware"
version = "0.1.0"
description = "FastAPI middleware that serves mock responses from a Sharkio export config"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.100.0",
    "starlette>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sharkio_mock_middleware*"]
